Add kube-minions role
Implement kube-minion ansible role, using flannel as overlay network.

- Kubeconfig and kube-proxy point to keepalived/haproxy VIP

- Update inventory file, gorup names are changed

- Add vars sample file all.yml.sample

Resolves: #2

--- a/roles/kube-minion/templates/kubeconfig.j2
+++ b/roles/kube-minion/templates/kubeconfig.j2
@@ -2,7 +2,7 @@ kind: Config
 clusters:
 - cluster:
     certificate-authority: /var/lib/kubernetes/ca.pem
-    server: https://{{ hostvars.kube0.ansible_ssh_host }}:6443
+    server: https://{{ MASTER_HOST }}:6443
   name: kubernetes
 contexts:
 - context:
