--- a/roles/kube-minion/templates/systemd/docker.service.j2
+++ b/roles/kube-minion/templates/systemd/docker.service.j2
@@ -1,8 +1,15 @@
 Description=Docker Application Container Engine
 Documentation=http://docs.docker.io
+Requires=flannel.service
+After=flannel.service
 
 [Service]
+EnvironmentFile=/run/flannel/subnet.env
+ExecStartPre=-/bin/sh -c "ifconfig docker0 down; brctl delbr docker0"
+ExecStartPre=/bin/mount --make-rprivate /
 ExecStart=/usr/bin/docker daemon \
+  --bip=${FLANNEL_SUBNET} \
+  --mtu=${FLANNEL_MTU} \
   --iptables=false \
   --ip-masq=false \
   --host=unix:///var/run/docker.sock \
@@ -10,7 +17,7 @@ ExecStart=/usr/bin/docker daemon \
   --storage-driver=overlay
 Restart=on-failure
 RestartSec=5
-# MountFlags=slave
+MountFlags=slave
 LimitNOFILE=1048576
 LimitNPROC=1048576
 LimitCORE=infinity
